--- a/form.pug
+++ b/form.pug
@@ -4,6 +4,7 @@ head
   meta(charset="UTF-8")
   title アンケート
 body
+  a(href="/logout") ログアウト
   h1 どちらが食べたいですか？
   form(method="post" action=path)
     | 名前：
